# Visual_Computing_2025_Assignment_2

./: CMakeLists.txt  CMakePresets.json  README.md  VisualComputing_2_3.h
assets/shaders/: filter_pixelate.frag  filter_sincity.frag  passthrough.frag
src/: cv_filters.cpp  cv_filters.hpp  cv_geom.cpp  cv_geom.hpp  gl_utils.cpp  gl_utils.hpp  gpu_pipeline.cpp  gpu_pipeline.hpp  interactive.cpp  main.cpp  perf_summary_Debug.csv  perf_summary_Release.csv  timing.hpp
